[gd_scene load_steps=2 format=3 uid="uid://le0ldp8ksr67"]

[ext_resource type="Script" path="res://Content/User Interface/Heads Up Display/Scripts/HUD.gd" id="1_hbnec"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbnec")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 377
alignment = 1

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(377, 50)
layout_mode = 2
size_flags_vertical = 4
step = 1.0
show_percentage = false

[node name="HealtBarLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "26/60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(377, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "50.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(377, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 377
alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(377, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Score: 50"
vertical_alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(377, 0)
layout_mode = 2

[node name="Seperator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(377, 0)
layout_mode = 2
